# lingua-franca

benchmark/TS/: LogicalPrint.lf
example/C/Federated/DistributedDatabase/: BetterReplicatedDatabase.lf
example/Physical Actions/C/: AsyncCallback.lf  ButtonWithDelay.lf  ButtonWithDelayNaive.lf  TwoButtonsWithDelay.lf  TwoButtonsWithDelayNaive.lf
example/Physical Actions/Cpp/: AsyncCallback.lf  ButtonWithDelay.cmake  ButtonWithDelay.lf  TwoButtonsWithDelay.cmake  TwoButtonsWithDelay.lf
test/C/: CMakeLists.txt
test/C/src/federated/: DistributedCountDecentralizedLate.lf  DistributedCountDecentralizedLateDownstream.lf  DistributedCountDecentralizedLateHierarchy.lf  DistributedLoopedPhysicalActionDecentralized.lf
xtext/org.icyphy.linguafranca.diagram/src/org/icyphy/linguafranca/diagram/synthesis/: LinguaFrancaSynthesis.xtend
xtext/org.icyphy.linguafranca/src/lib/core/: federate.c  federate.h  reactor_common.c  reactor_threaded.c
xtext/org.icyphy.linguafranca/src/org/icyphy/: ASTUtils.xtend  LinguaFranca.xtext
xtext/org.icyphy.linguafranca/src/org/icyphy/generator/: CGenerator.xtend  GeneratorBase.xtend
xtext/org.icyphy.linguafranca/src/org/icyphy/validation/: LinguaFrancaValidator.xtend
